fix: fix html has overflow

--- a/src/assets/themes/mirtek/style.scss
+++ b/src/assets/themes/mirtek/style.scss
@@ -439,6 +439,9 @@ body *::-webkit-scrollbar-thumb {
     background-position: 0 0;
   }
 }
+html {
+  overflow: hidden;
+}
 
 /* Main */
 html,
