--- a/src/assets/themes/oek/style.scss
+++ b/src/assets/themes/oek/style.scss
@@ -467,6 +467,10 @@ body *::-webkit-scrollbar-thumb {
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 /* Main */
 html,
 body {
